force-app/main/default/objects/Teacher__c/fields/Degree__c.field-meta.xml
<CustomField>
    <fullName>Degree__c</fullName>
    <label>Degree</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bachelor</fullName>
            </value>
            <value>
                <fullName>Doctoral</fullName>
            </value>
            <value>
                <fullName>Master</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>