force-app/main/default/objects/Teacher__c/fields/Teacher_Name__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Name__c</fullName>
    <label>Teacher Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>